# YOLO-seg-git

./: active_learning.ipynb  analyzer_subset.py  data_manager.py  explore_yolo.py  false_rate_plot.py  main_analysis_subset.py  main_train_subset.py  main_visualization.py  metrics_visualizer.py  model_interface.py  pyproject.toml  result_saver.py  run_all _subset.py
